--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "jwt-decode": "^3.1.2",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0",
+    "react-images-uploading": "^3.1.7",
+    "react-loader-spinner": "^5.1.5",
+    "react-multi-carousel": "^2.8.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
