--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "google-auth-library": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7"
   }
 }
